<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">小说汇</string>
    <string name="close">关闭</string>
    <string name="open">打开</string>
    <string name="copy_finish">文件准备完成</string>
	<string name="bookpop_directory">目录</string>
	<string name="bookpop_progress">进度</string>
    <string name="bookpop_size">字体</string>
    <string name="bookpop_light">亮度</string>
    <string name="bookpop_night">夜间</string>
	<string name="bookpop_day">白天</string>

</resources>
