<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@color/bg_tool_bar"
	android:orientation="vertical"
	android:baselineAligned="false">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="1px"
		android:background="@color/divider_tool_bar"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:baselineAligned="false"
		android:layout_marginTop="6dp"
		android:layout_marginBottom="3dp">

		<TextView
			android:id="@+id/btn_directory"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:drawableTop="@drawable/btn_directory"
			android:drawablePadding="5px"
			android:gravity="center"
			android:textColor="@color/txt_tool_bar"
			android:text="@string/bookpop_directory"/>

		<TextView
			android:id="@+id/btn_progress"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:drawableTop="@drawable/btn_progress"
			android:drawablePadding="5px"
			android:gravity="center"
			android:textColor="@color/txt_tool_bar"
			android:text="@string/bookpop_progress"/>

		<TextView
			android:id="@+id/btn_text_size"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:drawableTop="@drawable/btn_text_size"
			android:drawablePadding="5px"
			android:gravity="center"
			android:textColor="@color/txt_tool_bar"
			android:text="@string/bookpop_size"/>

		<TextView
			android:id="@+id/btn_brightness"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:drawableTop="@drawable/btn_brightness"
			android:drawablePadding="5px"
			android:gravity="center"
			android:textColor="@color/txt_tool_bar"
			android:text="@string/bookpop_light"/>

		<TextView
			android:id="@+id/btn_night"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:drawableTop="@drawable/btn_night"
			android:drawablePadding="5px"
			android:gravity="center"
			android:textColor="@color/txt_tool_bar"
			android:text="@string/bookpop_night"/>
	</LinearLayout>

</LinearLayout>
